# bevy-game-experiments

./: .gitignore  .grype.yaml  .syft.yaml  Cargo.toml  Makefile.toml  README.md  deny.toml  index.html
.github/workflows/: main-security.yml  page.yml  pr-security.yml  pr-test.yml  release.yml
src/: main.rs  systems.rs
src/enemy/: mod.rs  systems.rs
src/player/: mod.rs  systems.rs
src/score/: systems.rs
src/star/: mod.rs
